fixed html code, spacing, grid, alignment and most everything else

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,91 +1,10 @@
 body {
     font-size: 14px;
-    line-height: 18px;
+    line-height: 24px;
     background-image: url("images/trees.png");
-    color: lightgrey; 
+    color: black; 
 }
 
-#hr {
-    border-top: 1px solid #4aaaa5;
+a {
+    color: red;
 }
-
-#img {
-    margin: 5px;
-}
-
-main {
-    margin: 10px;
-    padding: 0px; 
-}
-
-#main {
-    padding-left: 0; 
-}
-
-section {
-    background-color: gray;
-    padding-top: 10px;
-    border: 3px solid #4aaaa5;
-    color: black;
-}
-
-aside {
-    margin-top: 20px;
-    color: black;
-    background-color: grey;
-    border: 3px solid #4aaaa5;
-}
-
-#text_pad {
-    padding: 10px; 
-}
-
-#head_pad {
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-#margin {
-    margin-top: 10px; 
-}
-
-h1 {
-    font-size: 24px;
-    margin-top: 10px; 
-    color: black;
-}
-
-h2 {
-    font-size: 18px;
-}
-
-h3 {
-    font-size: 16px
-}
-
-p {
-    margin: 10px;
-}
-
-ul {
-    margin: 5px; 
-}
-
-li {
-    margin: 0; 
-    padding: 0;
-}
-
-#center {
-    text-align: center;
-}
-
-#icons {
-    display: inline-block;
-    background: transparent;
-    padding-right: 10px;
-    padding-left: 10px; 
-    margin: 0; 
-}
-
-
